separate the out stream into a separate class